# ufs

./: .gitmodules  CMakeLists.txt  README.md
include/: ufs.h
include/ufs/: buf.h  conf.h  file.h  mod.h  op.h  path.h  stream.h
src/: file.c  op.c  path.c  stream.c
test/: ufs.c
